app/assets/stylesheets/_tasks.scss
.task-page {
  @include content;
  p.closed { font-weight: bold; }

  dl dt { display: block; float: left; font-weight: bold; width: 100px; }
  dl dd { clear: right; margin: 5px 0; }

  code.solution-token {
    padding: 8px 16px;
  }
}

table.solutions {
  @include data-table;

  th { white-space: nowrap; }
  td { vertical-align: top; }

  td.name { @include link-table-cell(10px 15px); }
  td.script { word-break: break-all; font-variant-ligatures: none; }
  td.timestamp { white-space: nowrap; }

  .points { width: 150px; white-space: nowrap; }
  .results { width: 180px; white-space: nowrap; }

  .results span { display: inline-block; margin-left: 5px; }
  .results span:first-child { margin-left: 0; }

  .passed { @include replace-with-image('icons/flag_green.png', 16px, 16px); }
  .failed { @include replace-with-image('icons/flag_red.png', 16px, 16px); }
  .lines { @include replace-with-image('icons/page_white_text.png', 16px, 16px); }
  .comments { @include replace-with-image('icons/comments.png', 16px, 16px); }

  .point { @include replace-with-image('icons/emoticon_grin.png', 16px, 16px); display: inline-block; }
  .bonus-point { @include replace-with-image('icons/star.png', 16px, 16px); display: inline-block; }
  .penalty-point { @include replace-with-image('icons/stop.png', 16px, 16px); display: inline-block; }

  .sort-link {
    color: white;
    text-decoration: none;
  }
}

#tasks {
  @include content;

  > table {
    @include data-table;

    td.solved { width: 52px; }
    td.count { width: 52px; }
    td.name {
      @include link-table-cell(10px 15px);
      word-break: break-all;
    }
    td.closes_at { width: 270px; }
  }
}

.solution {
  @include content;

  dl dt { display: block; float: left; font-weight: bold; width: 200px; }
  dl dd { clear: right; margin: 5px 0; }

  article.revision { border: 1px solid $light-border; border-radius: 4px; padding: 2em; margin: 2em 0; }
  article.revision h3 { margin: 0 0 2em; }
  article.comment { @include contribution; }
  article.comment:first-of-type { margin-top: 1em; }
  article.revision > pre,
  > pre { background-color: #f8f8ff; color: #444; padding: .5em 1em; border: 1px solid #dedede; border-radius: 2px; overflow-x: auto; }
}

#my-solution {
  .violations { background-color: #fdd; border: 1px #f55 solid; margin-top: 1em; padding: 20px; }
  .violations p { margin: 0 0 1em 0; }
  textarea#code { font-family: $font-monospace; width: 600px; height: 600px; }
}

p.task-guide-notice { font-style: italic; color: $quiet; }

.special-key {
  color: #990000;
  font-weight: bold;
  font-family: monospace;
  white-space: pre;
  font-size: 80%;
}

.sequence-key {
  color: #997700;
  font-weight: bold;
  font-family: monospace;
  white-space: pre;
  font-size: 80%;
}

.normal-key {
  font-family: monospace;
  white-space: pre;
  font-size: 80%;
}

.input-output-table {
  width: 100%;
  border-collapse: separate;

  th {
    font-weight: bold;
    text-align: left;
  }

  th, td {
    padding: 8px 16px;
    &:first-child {
      padding-left: 0;
    }
  }

  td {
    width: 50%;
  }
}

